--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,11 +1,11 @@
-name: influxdb
+name: influxdb-ijohnson
 version: '1.5.1'
 summary: An Open-Source Time Series Database
 description: |
   InfluxDB is an open source time series database with no external dependencies.
   It's useful for recording metrics, events, and performing analytics.
 
-grade: devel
+grade: stable
 confinement: strict
 
 parts:
