Fix for copying .git files failing during build
We don't want to include hidden folders like .git, so instead of copying the whole directory, we just copy parts of it

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -33,7 +33,7 @@ parts:
       export GOPATH=$(readlink -f $(pwd)/../go)
       export GOIMPORTPATH=$GOPATH/src/github.com/influxdata/influxdb/
       mkdir -p $GOIMPORTPATH
-      cp -r . $GOIMPORTPATH
+      cp -r ./* $GOIMPORTPATH
       cd $GOIMPORTPATH
       python build.py --outdir $SNAPCRAFT_PART_INSTALL/bin
       mkdir -p $SNAPCRAFT_PART_INSTALL/conf
