snapcraft.yaml: specify license as MIT, include upstream license file
This snap packaging is under the same license as the upstream project.

Signed-off-by: Ian Johnson <ian.johnson@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -9,6 +9,8 @@ description: |
 grade: stable
 confinement: strict
 
+license: MIT
+
 parts:
   influxdb:
     source: https://github.com/influxdata/influxdb.git
